--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "cliqr",
   "version": "0.1.0",
+  "engines": {
+    "node": "14.16.0",
+    "npm": "7.8.0"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
