--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "start": "serve -s build",
     "dev": "react-scripts start",
-    "start": "react-scripts serve",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
